<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.camara</groupId>
  <artifactId>qod</artifactId>
  <version>0.8.0</version>
  <description>Service Enabling Function for Quality-of-Service</description>
  <organization>
    <name>Deutsche Telekom AG</name>
  </organization>

  <packaging>pom</packaging>

  <properties>
    <java.version>17</java.version>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <license.licenseName>apache_v2</license.licenseName>
    <license.projectName>CAMARA Project</license.projectName>
    <license.inceptionYear>2022</license.inceptionYear>
    <license.git.copyrightLastYear>2023</license.git.copyrightLastYear>
    <!--dependencies-->
    <plugin.jacoco.version>0.8.8</plugin.jacoco.version>
    <spotbugs.version>4.7.1.1</spotbugs.version>
    <plugin.checkstyle.version>3.1.2</plugin.checkstyle.version>
    <org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
    <lombok.version>1.18.24</lombok.version>
    <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
    <shedlock-spring.version>4.42.0</shedlock-spring.version>
    <springdoc.version>2.0.2</springdoc.version>
  </properties>

  <modules>
    <module>api</module>
    <module>core</module>
    <module>3gpp</module>
    <module>coverage</module>
  </modules>

  <build>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>2.0.0</version>
        <configuration>
          <outputDirectory>.</outputDirectory>
          <thirdPartyFilename>THIRD-PARTY.md</thirdPartyFilename>
          <fileTemplate>templates/third-party.ftl</fileTemplate>
          <excludedGroups>camara</excludedGroups>
          <addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
          <emptyLineAfterHeader>true</emptyLineAfterHeader>
          <includes>**/*.java</includes>
          <roots>src</roots>
          <trimHeaderLine>true</trimHeaderLine>
          <sectionDelimiter>---</sectionDelimiter>
          <copyrightOwners>Contributors | ${project.organization.name} to CAMARA a Series of LF
            Projects, LLC &#x0A;The contributor of this file confirms his sign-off for the &#x0A;Developer
            Certificate of Origin (http://developercertificate.org).
          </copyrightOwners>
          <processStartTag>---license-start</processStartTag>
          <processEndTag>---license-end</processEndTag>
          <failOnMissingHeader>true</failOnMissingHeader>
          <failOnNotUptodateHeader>true</failOnNotUptodateHeader>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.9.0</version>
        <configuration>
          <compilerArgs>
            <arg>-parameters</arg>
          </compilerArgs>
          <source>17</source>
          <target>17</target>
          <annotationProcessorPaths>
            <path>
              <groupId>org.mapstruct</groupId>
              <artifactId>mapstruct-processor</artifactId>
              <version>${org.mapstruct.version}</version>
            </path>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>RELEASE</version>
            </path>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok-mapstruct-binding</artifactId>
              <version>${lombok-mapstruct-binding.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${plugin.checkstyle.version}</version>
        <configuration>
          <configLocation>checkstyle.xml</configLocation>
          <excludes>target/**/*</excludes>
          <encoding>UTF-8</encoding>
          <consoleOutput>true</consoleOutput>
          <failsOnError>false</failsOnError>
          <failOnViolation>false</failOnViolation>
          <violationSeverity>warning</violationSeverity>
          <linkXRef>false</linkXRef>
          <sourceDirectories>
            <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
            <sourceDirectory>${project.build.testSourceDirectory}</sourceDirectory>
          </sourceDirectories>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>10.3.2</version>
          </dependency>
        </dependencies>
        <executions>
          <execution>
            <id>check</id>
            <phase>package</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
